Add branding information to repositories
This adds a branding information structure to repositories to allow for
publishing a title, subtitle, site URL, and logo image.