@@ -24,6 +24,7 @@ import com.io7m.coffeepick.repository.spi.RuntimeRepositoryType;
 import com.io7m.coffeepick.runtime.RuntimeDescription;
 import com.io7m.coffeepick.runtime.RuntimeDescriptionType;
 import com.io7m.coffeepick.runtime.RuntimeDescriptions;
+import com.io7m.coffeepick.runtime.RuntimeRepositoryBranding;
 import com.io7m.coffeepick.runtime.RuntimeRepositoryDescription;
 import io.reactivex.Observable;
 import io.reactivex.subjects.PublishSubject;
@@ -33,6 +34,9 @@ import org.slf4j.LoggerFactory;
 
 import java.io.IOException;
 import java.io.UncheckedIOException;
+import java.net.URI;
+import java.net.URISyntaxException;
+import java.time.OffsetDateTime;
 import java.util.Collections;
 import java.util.Map;
 import java.util.Objects;
@@ -50,13 +54,16 @@ import java.util.stream.Stream;
 
 public final class OJNRepository implements RuntimeRepositoryType
 {
-  private static final Logger LOG = LoggerFactory.getLogger(OJNRepository.class);
+  private static final Logger LOG =
+    LoggerFactory.getLogger(OJNRepository.class);
+  private static final String BUILDS =
+    "/com/io7m/coffeepick/jdk_java_net/build.properties";
 
-  private static final String BUILDS = "/com/io7m/coffeepick/jdk_java_net/build.properties";
   private final ConcurrentHashMap<String, RuntimeDescription> runtimes;
-  private final Map<String, RuntimeDescription> runtimes_read;
+  private final Map<String, RuntimeDescription> runtimesRead;
   private final OJNRepositoryProvider provider;
   private final Subject<RuntimeRepositoryEventType> events;
+  private volatile RuntimeRepositoryDescription description;
 
   OJNRepository(
     final OJNRepositoryProvider in_provider)
@@ -64,7 +71,16 @@ public final class OJNRepository implements RuntimeRepositoryType
   {
     this.provider = Objects.requireNonNull(in_provider, "provider");
     this.runtimes = new ConcurrentHashMap<>(128);
-    this.runtimes_read = Collections.unmodifiableMap(this.runtimes);
+    this.runtimesRead = Collections.unmodifiableMap(this.runtimes);
+
+    this.description =
+      RuntimeRepositoryDescription.builder()
+        .setBranding(createBranding())
+        .setId(this.provider.uri())
+        .setRuntimes(Map.copyOf(this.runtimes))
+        .setUpdated(Optional.empty())
+        .build();
+
     this.events = PublishSubject.<RuntimeRepositoryEventType>create().toSerialized();
     this.update(() -> false);
   }
@@ -81,6 +97,28 @@ public final class OJNRepository implements RuntimeRepositoryType
     } catch (final IOException e) {
       throw new UncheckedIOException(e);
     }
+  }
+
+  private static RuntimeRepositoryBranding createBranding()
+  {
+    try {
+      return RuntimeRepositoryBranding.builder()
+        .setLogo(logoURI())
+        .setSite(URI.create("https://jdk.java.net"))
+        .setSubtitle("Java Development Kit builds, from Oracle")
+        .setTitle("jdk.java.net")
+        .build();
+    } catch (final URISyntaxException e) {
+      throw new RuntimeException(e);
+    }
+  }
+
+  private static URI logoURI()
+    throws URISyntaxException
+  {
+    return OJNRepository.class.getResource(
+      "/com/io7m/coffeepick/jdk_java_net/duke128.png"
+    ).toURI();
   }
 
   @Override
@@ -107,6 +145,8 @@ public final class OJNRepository implements RuntimeRepositoryType
         final var builds = new Properties();
         builds.load(stream);
 
+        final var updated =
+          OffsetDateTime.parse(builds.getProperty("coffeepick.updated"));
         final var names =
           builds.getProperty("coffeepick.builds").split(" ");
 
@@ -118,10 +158,13 @@ public final class OJNRepository implements RuntimeRepositoryType
         final var next_runtimes =
           Stream.of(names)
             .map(OJNRepository::loadBuild)
-            .collect(Collectors.toMap(RuntimeDescriptionType::id, Function.identity()));
+            .collect(Collectors.toMap(
+              RuntimeDescriptionType::id,
+              Function.identity()));
 
         this.runtimes.clear();
         this.runtimes.putAll(next_runtimes);
+        this.description = this.description.withUpdated(updated);
 
         this.events.onNext(
           RuntimeRepositoryEventUpdateFinished.builder()
@@ -136,16 +179,12 @@ public final class OJNRepository implements RuntimeRepositoryType
   @Override
   public Map<String, RuntimeDescription> runtimes()
   {
-    return this.runtimes_read;
+    return this.runtimesRead;
   }
 
   @Override
   public RuntimeRepositoryDescription description()
   {
-    return RuntimeRepositoryDescription.builder()
-      .setUpdated(Optional.empty())
-      .setId(this.provider.uri())
-      .setRuntimes(Map.copyOf(this.runtimes))
-      .build();
+    return this.description;
   }
 }
